--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- SEO Meta Tags -->
   <meta name="description" content="İnat TV hakkında detaylı bilgi, kullanıcı dostu arayüz, geniş içerik yelpazesi ve sorunsuz izleme deneyimi hakkında her şey.">
   <meta name="keywords" content="İnat TV, film, dizi, online yayın, eğlence, Türkiye, çizgi film">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://safeviewing.github.io/live-broadcasts/">
+
+  <!-- Hreflang for language targeting -->
+  <link rel="alternate" hreflang="tr" href="https://safeviewing.github.io/live-broadcasts/">
+  <link rel="alternate" hreflang="en" href="https://safeviewing.github.io/live-broadcasts-en/">
+
   <title>İnat TV: Eğlencenin Kesintisiz Adresi</title>
+
+  <!-- Short JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "İnat TV",
+    "url": "https://safeviewing.github.io/live-broadcasts/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://safeviewing.github.io/live-broadcasts/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
