--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <meta name="google-site-verification" content="upTQ_rShf-MlSACJbYmMwOAD2iQrgoRy3AQxsXJMlB8" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -149,3 +150,4 @@
   </div>
 </body>
 </html>
+
